# art

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_GO_WRAPPER.md  default_artmap_2.go  fuzzy_art.cpp  fuzzy_art.go  fuzzy_art.hpp  fuzzy_art_test.go  fuzzy_art_wrapper.cpp  fuzzy_art_wrapper.h  fuzzy_art_wrapper_api.go  fuzzy_artmap.go  go.mod  go.sum  main.cpp
.run/: go build art_example_fuzzy_art.run.xml
example/: dataset.go  main.go  progress_bar.go
example/default_artmap_2/: main.go
example/fuzzy_art/: main.go
example/internal/progress_bar/: progress_bar.go
example2/: example_usage.go
internal/apple/: accelerate.go  neon.go
internal/avx512/: avx512.go  avx512_test.go
internal/dataset/: dataset.go
internal/progress_bar/: progress_bar.go
internal/simd/: accelerate.go  accelerate_arm64.go  avx2_amd64.go  avx512.go  avx512_amd64.go  factory_amd64.go  generic.go  neon_arm64.go  simd.go  simd_test.go
internal/simd/accelerate/: accelerate_arm64.go
internal/simd/avx512/: avx512_amd64.go
testdata/: README.md
